test/ui/parsing/unexpected-line-break.stderr
error[E044]: unbalanced round bracket
  ┌─ ${TEST_FOLDER}/parsing/unexpected-line-break.lushui:3:9
  │
3 │ data X: (
  │         ═ has no matching closing round bracket

error[E010]: found line break but expected ‘)’ or expression
  ┌─ ${TEST_FOLDER}/parsing/unexpected-line-break.lushui:3:10
  │
3 │ data X: (
  │         ⟫⟪ unexpected token

error: aborting due to 2 previous errors

