test/ui/parsing/unexpected-line-break.lushui
# @Bug this should just say "expected expression", not "expected ‘)’ or expression"

data X: (
